--- a/Class2/Practice/slr/SimpleLinearRegressionPractice.ipynb
+++ b/Class2/Practice/slr/SimpleLinearRegressionPractice.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,18 +45,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/ricky/Desktop/DATA SCIENCE/ds-class-medium/Class2/Practice/slr'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=\"your/data/path\"\n",
+    "path=\"/Users/ricky/Desktop/DATA SCIENCE/ds-class-medium/Class2/Practice/slr\"\n",
     "data1b = \"train.csv\"\n",
     "data1t = \"test.csv\"\n",
     "data2b = \"train2.csv\"\n",
     "data2t = \"test2.csv\"\n",
     "data3b = \"train3.csv\"\n",
-    "data3t = \"test3.csv\"\n",
-    "#print(os.path.join(path, data1b))"
+    "data3t = \"test3.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ricky/Desktop/DATA SCIENCE/ds-class-medium/Class2/Practice/slr/train.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.path.join(path, data1b))"
    ]
   },
   {
@@ -68,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +223,7 @@
        "4  87.0  87.288984"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +301,7 @@
        "4  36  41.849864"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -307,17 +343,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>699.000000</td>\n",
+       "      <td>700.000000</td>\n",
        "      <td>699.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>50.014306</td>\n",
+       "      <td>54.985939</td>\n",
        "      <td>49.939869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>28.954560</td>\n",
+       "      <td>134.681703</td>\n",
        "      <td>29.109217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -342,7 +378,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>100.000000</td>\n",
+       "      <td>3530.157369</td>\n",
        "      <td>108.871618</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -350,18 +386,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                x           y\n",
-       "count  699.000000  699.000000\n",
-       "mean    50.014306   49.939869\n",
-       "std     28.954560   29.109217\n",
-       "min      0.000000   -3.839981\n",
-       "25%     25.000000   24.929968\n",
-       "50%     49.000000   48.973020\n",
-       "75%     75.000000   74.929911\n",
-       "max    100.000000  108.871618"
+       "                 x           y\n",
+       "count   700.000000  699.000000\n",
+       "mean     54.985939   49.939869\n",
+       "std     134.681703   29.109217\n",
+       "min       0.000000   -3.839981\n",
+       "25%      25.000000   24.929968\n",
+       "50%      49.000000   48.973020\n",
+       "75%      75.000000   74.929911\n",
+       "max    3530.157369  108.871618"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +493,7 @@
        "max    100.000000  105.591837"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -519,16 +555,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a1f76b5f8>"
+       "<matplotlib.legend.Legend at 0x7fa328b137c0>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -566,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
